<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.Popcorn.NoActionBar.NoActionBar">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@color/background"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/titan"
        app:layout_constraintCircleRadius="100dp"
        android:contentDescription="@string/item_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/img_poster"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:ellipsize="marquee"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rl_rating_duration"/>

        <TextView
            android:id="@+id/tv_item_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/year"
            android:textColor="@color/pink"
            android:fontFamily="@font/nuggetmed"
            app:layout_constraintTop_toBottomOf="@id/tv_item_title"
            app:layout_constraintStart_toStartOf="@+id/tv_item_title"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_item_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="12sp"
            tools:text="@string/tags"
            android:layout_marginTop="2dp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_year"
            app:layout_constraintStart_toStartOf="@+id/tv_item_year"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_rating_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/img_rating"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:src="@drawable/imdb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/imdb" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/rating"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:fontFamily="@font/nuggetmed"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_rating"
                app:layout_constraintStart_toEndOf="@+id/img_rating"/>

            <ImageView
                android:id="@+id/img_duration"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_duration"
                app:layout_constraintTop_toBottomOf="@+id/img_rating"
                app:layout_constraintStart_toStartOf="@+id/img_rating"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/duration" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/duration"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:fontFamily="@font/nuggetmed"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_duration"
                app:layout_constraintStart_toEndOf="@+id/img_duration"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_tags"
            app:layout_constraintStart_toStartOf="@+id/tv_item_tags"
            android:layout_marginTop="15dp"
            tools:text="@string/description"
            android:textSize="12sp"
            android:textColor="@android:color/white" />
        
        <TextView
            android:id="@+id/label_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/nuggetmed"
            android:text="@string/director"/>

        <TextView
            android:id="@+id/tv_director"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/label_director"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/pink"
            android:textStyle="bold"
            android:fontFamily="@font/nuggetmed"
            android:ellipsize="marquee"
            tools:text="Director"/>

        <TextView
            android:id="@+id/label_writers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/label_director"
            app:layout_constraintTop_toBottomOf="@+id/label_director"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/nuggetmed"
            android:text="@string/writer"/>

        <TextView
            android:id="@+id/tv_writers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/label_writers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_director"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/pink"
            android:textStyle="bold"
            android:fontFamily="@font/nuggetmed"
            android:ellipsize="marquee"
            tools:text="Writer"/>

        <TextView
            android:id="@+id/label_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/label_writers"
            app:layout_constraintTop_toBottomOf="@+id/label_writers"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/nuggetmed"
            android:text="@string/stars"/>

        <TextView
            android:id="@+id/tv_stars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/label_stars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_writers"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/pink"
            android:textStyle="bold"
            android:fontFamily="@font/nuggetmed"
            android:ellipsize="marquee"
            tools:text="Stars"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>